external-crates/move/crates/move-compiler/tests/move_check/parser/recovery_parse_module_unclosed_module_error.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/recovery_parse_module_unclosed_module_error.move:7:1
  │
7 │ module 0x42::M2 {
  │ ^^^^^^
  │ │
  │ Unexpected 'module'
  │ Expected an identifier

error[E04007]: incompatible types
  ┌─ tests/move_check/parser/recovery_parse_module_unclosed_module_error.move:8:36
  │    
8 │         public fun wrong_return(): u64 {
  │                                    --- Expected: 'u64'
  │ ╭──────────────────────────────────────^
  │ │ ╭────────────────────────────────────'
9 │ │ │     }
  │ ╰─│─────^ Invalid return expression
  │   ╰─────' Given: '()'
